k8s/test/hw2-openapi-crud-dockerfile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2-openapi-crud-dockerfile
spec:
  selector:
    app: hw2-openapi-crud-dockerfile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
